Context name fix

--- a/EcoHub/appsettings.json
+++ b/EcoHub/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RestaurantContext": "Host=localhost;Port=5432;Username=admin;Password=password;Database=ecohub"
+    "EcoHubContext": "Host=localhost;Port=5432;Username=admin;Password=password;Database=ecohub"
   }
 }
